# CGI-tools

./: .cliff.toml  .gitignore  .release-please-config.json  .release-please-manifest.json  CHANGELOG.md  LICENSE  README.md  REUSE.toml  codecov.yml  pyproject.toml  release-please-config.json
.github/workflows/: changelog.yml  ci-release.yml  ci.yml  python-package-conda.yml  release.yml  tests.xx  tests.yml
AccountingEntryClassUpdater/: AccountingEntryClassUpdater.py  README.md
HISTMessagesGenerator/: HISTMessagesGenerator.py  ProductClassResolver.py  README.md  conftest.py  decorators.py  pyproject.toml  pytest.ini  run_tests.bat  test_hist_messages_generator.py
HISTMessagesGenerator/.reuse/: dep5
HISTMessagesGenerator/src/hist_messages_generator/: __init__.py  hist_messages_generator.py  product_class_resolver.py
HISTMessagesGenerator/tests/: conftest.py  fixtures.py  test_coverage_gaps.py  test_hist_messages_generator.py  test_init.py  test_integration.py  test_logging_decorators.py  test_performance.py  test_product_class_resolver.py  test_regression.py  test_version.py
XMLExtractor/: .coverage  .coveragerc  .gitignore  CHANGELOG.md  README.md  __init__.py  conftest.py  pyproject.toml  pytest.ini  replacements.json  requirements.txt  run_tests.bat  xml_extractor.py
XMLExtractor-1.2/: .coverage  .coveragerc  .gitignore  CHANGELOG.md  README.md  __init__.py  conftest.py  decorators.py  version.py  xml_extractor.html  xml_extractor.py
XMLExtractor-1.2/tests/: fixtures.py  generate_test_sets.py  test_benchmarks.py  test_check_output_dir.py  test_clean_xml_content.py  test_configure_logging.py  test_create_protected_zip.py  test_create_unprotected_zip.py  test_create_zip_archive.py  test_delete_output_dir.py  test_edge_cases.py  test_extract_and_save.py  test_get_message_id.py  test_get_row_count.py  test_integration_pipeline.py  test_load_replace_map_from_json.py  test_log_exceptions_decorator.py  test_main_block.py  test_performance_regression.py  test_play_sound.py  test_process_input_file.py  test_running_in_test_mode.py  test_validate_arguments.py  test_validate_column_exists.py  test_validate_xml_structure.py  test_validate_zip_password.py  test_xml_extractor_init.py
XMLExtractor/src/xml_extractor/: __init__.py  logging_decorators.py  version.py  xml_extractor.py
XMLExtractor/src/xml_extractor/sounds/: homer_error.wav.license
XMLExtractor/tests/: __init__.py  fixtures.py  test_benchmarks.py  test_configure_logging.py  test_create_protected_zip.py  test_create_unprotected_zip.py  test_create_zip_archive.py  test_edge_cases.py  test_extract_and_save.py  test_get_message_id.py  test_get_row_count.py  test_integration_pipeline.py  test_load_replace_map_from_json.py  test_log_exceptions_decorator.py  test_main_block.py  test_performance_regression.py  test_play_sound.py  test_process_input_file.py  test_validate_arguments.py  test_validate_column_exists.py  test_validate_xml_structure.py  test_validate_zip_password.py  test_xml_extractor_init.py
