[project]
name = "xml-extractor"
version = ["1.2.6"]
dynamic = ["version"]

description = "XML extraction tool"
authors = [
    { name = "Laurent Morissette-Fournier", email = "laurent.morissette-fournier@domain.com" }
]
dependencies = [
    "lxml",
    "pytest"
]
[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = [
    "E501",  # Line too long (handled by black)
   
]
[tool.setuptools_scm] 
version_scheme = "post-release"
local_scheme = "no-local-version"