[project]
name = "hist-messages-generator"
version = "0.1.0"  # release-please pourra gérer ça plus tard
description = "Generate HIST interface SQL messages from SQL Developer XML exports"

authors = [
    { name = "Laurent Morissette-Fournier", email = "laurent.morissette-fournier@domain.com" }
]

readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "rich"  # utilisé pour RichHandler
]

# -------------------------
# Dev dependencies
# -------------------------
[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "pytest-xdist",
    "ruff",
    "reuse"
]

# -------------------------
# CLI
# -------------------------
[project.scripts]
hist-gen = "hist_messages_generator.hist_messages_generator:main"

# -------------------------
# Build system
# -------------------------
[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

# -------------------------
# Package discovery
# -------------------------
[tool.setuptools.packages.find]
where = ["src"]

# (si tu ajoutes des fichiers plus tard, ex: templates SQL)
# [tool.setuptools.package-data]
# hist_messages_generator = ["templates/*.sql"]

# -------------------------
# Ruff (lint)
# -------------------------
[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501","F401","F841"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["--tb=short", "-v", "--strict-markers"]
markers = [
    "benchmark: performance benchmark (deselect with '-m not benchmark')",
    "integration: end-to-end tests touching the filesystem",
    "regression: pinned regression tests that must never be removed",
]
