[project]
name = "xml-extractor"
version = "1.2.6"  # géré automatiquement par release-please
description = "XML extraction tool"
authors = [
    { name = "Laurent Morissette-Fournier", email = "laurent.morissette-fournier@domain.com" }
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "lxml"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "pytest-xdist",
    "ruff",
    "reuse"
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

# -------------------------
# Ruff (lint)
# -------------------------
[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]